clang/test/BSC/Negative/Trait/GenericTrait/define_trait_var2/define_trait_var2.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
  T foo(This* this);
};

int main() {
  _Trait F<int> a; // expected-error {{only _Trait pointer type is allowed to be declared}}
  return 0;
}